--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "@coreui/react": "^4.8.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.5",
+    "coreui": "^0.4.2-alpha2",
     "react-fade-in": "^2.0.1",
     "react-icons": "^4.9.0",
     "react-reveal": "^1.2.2",
